added presenter to all video / audio broadcast and voice transcription

--- a/src/views/app.jade
+++ b/src/views/app.jade
@@ -7,6 +7,8 @@ block content
     include ./templates/video
     include ./templates/participants
   include ./templates/partials.html
+  script(type='application/javascript', src='/vendor/firebase.js')
+  script(type='application/javascript', src='/vendor/RTCMultiConnection-v1.4.js')
   script(type='application/javascript', src='/vendor/jquery-1.10.2.js')
   script(type='application/javascript', src='/vendor/handlebars-1.0.0.js')
   script(type='application/javascript', src='/lib/app.js')
