--- a/src/views/layout.jade
+++ b/src/views/layout.jade
@@ -5,6 +5,7 @@ html
     //- stylesheets
     link(rel='stylesheet', type='text/css', href='/styles/fonts.css')
     link(rel='stylesheet', type='text/css', href='/styles/base.css')
+    link(rel='stylesheet', type='text/css', href='http://fonts.googleapis.com/css?family=Pacifico')
     //- libraries
     script(type='application/javascript', src='/socket.io/socket.io.js')
     if isProduction
