--- a/src/views/templates/video.jade
+++ b/src/views/templates/video.jade
@@ -1,4 +1,3 @@
 div#video
-	h3 Video
-	video.presenter(src="", autoplay="true")
+	video.presenter.standalone(src="", autoplay="true")
 	video.participant(src="", autoplay="true")
