--- a/src/public/styles/base.css
+++ b/src/public/styles/base.css
@@ -6,7 +6,8 @@
 html, body {
 	margin: 0;
 	padding: 0;
-	background: #00558c;
+	background: #fff;
+	font-family: Raleway, Helvetica, sans-serif;
 }
 
 #app {
@@ -59,6 +60,7 @@ h1 {
 	left: 0;
 	height: 50%;
 	width: 100%;
+	background: #00558c;
 }
 
 #participants {
@@ -77,9 +79,11 @@ h1 {
 }
 
 .presenter.standalone {
-	margin: 64px auto;
+	height: 75%;
+	margin: 5% auto;
 	display: block;
 	box-shadow: 0 0 26px #000;
+	background: url('/assets/images/preload.gif') center center no-repeat #000;
 }
 
 #transcript {
@@ -90,6 +94,63 @@ h1 {
 	width: 100%;
 }
 
+#transcript .toolbar {
+	background: #fff;
+	padding: 12px 24px;
+	overflow: hidden;
+	font-size: 
+}
+
+#transcript .language {
+	float: left;
+	width: 15%;
+	margin: 0 3% 0 0;
+	font-size: 12px;
+	padding: 6px 8px;
+}
+
+#transcript .conference-title {
+	float: left;
+	width: 55%;
+	margin: 4px 0;
+	font-size: 20px;
+	color: #9e005d;
+}
+
+#transcript .tools {
+	float: right;
+	width: 20%;
+	padding: 0;
+	margin: 0;
+	list-style-type: none;
+	overflow: hidden;
+}
+
+#transcript .tools li {
+	width: 33%;
+	float: left;
+	height: 32px;
+}
+
+#transcript .tools button {
+	width: 100%;
+	font-size: 10px;
+}
+
+#transcript .container {
+	overflow: auto;
+	background: #d3d3d3; /* Old browsers */
+	background: -moz-linear-gradient(top,  #d3d3d3 0%, #ffffff 13%, #ffffff 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#d3d3d3), color-stop(13%,#ffffff), color-stop(100%,#ffffff)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  #d3d3d3 0%,#ffffff 13%,#ffffff 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  #d3d3d3 0%,#ffffff 13%,#ffffff 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  #d3d3d3 0%,#ffffff 13%,#ffffff 100%); /* IE10+ */
+	background: linear-gradient(to bottom,  #d3d3d3 0%,#ffffff 13%,#ffffff 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d3d3d3', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
+}
+
 #transcript .target {
-	
+	margin: 24px;
+	font-size: 15px;
+	line-height: 24px;
 }
