--- a/src/views/layout.jade
+++ b/src/views/layout.jade
@@ -6,6 +6,8 @@ html
     link(rel='stylesheet', type='text/css', href='http://fonts.googleapis.com/css?family=Pacifico')
     link(rel='stylesheet', type='text/css', href='http://fonts.googleapis.com/css?family=Raleway:400,700')
     link(rel='stylesheet', type='text/css', href='/styles/base.css')
+    link(rel='stylesheet', type='text/css', href='/styles/print.css')
+    link(rel='stylesheet', type='text/css', href='/styles/landing-page.css')
     //- libraries
     script(type='application/javascript', src='/socket.io/socket.io.js')
     if isProduction
