--- a/src/public/styles/base.css
+++ b/src/public/styles/base.css
@@ -24,6 +24,13 @@ html, body {
 	left: 0;
 }
 
+.grayscale { 
+	-webkit-filter: grayscale(50%) blur(2px);
+	-moz-filter: grayscale(50%) blur(2px);
+	-ms-filter: grayscale(50%) blur(2px);
+	filter: grayscale(50%) blur(2px);
+}
+
 header {
 	position: fixed;
 	top: 0;
@@ -49,6 +56,15 @@ h1 {
 	float: left;
 }
 
+h6 {
+	font-family: Raleway, Helvetica, sans-serif;
+	color: #000;
+	font-size: 18px;
+	float: left;
+	margin: 33px 0;
+	font-weight: normal;
+}
+
 #vote {
 	float: right;
 	margin: 29px 24px;
@@ -60,7 +76,9 @@ h1 {
 	left: 0;
 	height: 50%;
 	width: 100%;
-	background: #00558c;
+	background: #00698c;
+	background-image: url("/assets/images/zenbg-1.png"), url("/assets/images/zenbg-2.png");
+	background-repeat: repeat-x, repeat;
 }
 
 #participants {
@@ -135,6 +153,27 @@ h1 {
 #transcript .tools button {
 	width: 100%;
 	font-size: 10px;
+	border: none;
+	text-indent: -9999px;
+	opacity: 0.7;
+	height: 100%;
+}
+
+#transcript .tools button:hover {
+	opacity: 1;
+	cursor: pointer;
+}
+
+button.font-inc {
+	background: url('/assets/images/text-increase.png') center center no-repeat;
+}
+
+button.font-dec {
+	background: url('/assets/images/text-decrease.png') center center no-repeat;
+}
+
+button.print {
+	background: url('/assets/images/print-transcript.png') center center no-repeat;
 }
 
 #transcript .container {
