--- a/src/views/templates/partials.html
+++ b/src/views/templates/partials.html
@@ -1,6 +1,6 @@
 <script type="text/x-handlebars-template" data-template-name="participant-list">
 	<li data-id="{{socket}}">
 		<img src="{{gravatar}}" height="32" width="32" />
-		{{username}}
+		<span class="user-name">{{username}}</span>
 	</li>
 </script>
