added chrome required views - fixed voice transcription emitter - tagging this as a potential candidate for deployment

--- a/src/views/footer.jade
+++ b/src/views/footer.jade
@@ -1,1 +1,2 @@
-footer A Thing by Gordon Hall &amp; Billy Snyder
+footer 
+	| A Thing by <a href="https://github.com/gordonwritescode">Gordon Hall</a> &amp; <a href="http://pixelfailure.com">Billy Snyder</a>.
