--- a/src/public/styles/base.css
+++ b/src/public/styles/base.css
@@ -306,3 +306,72 @@ button.print {
 	cursor: pointer;
 	background: #fff;
 }
+
+.block-ui {
+	position: fixed;
+	background: rgba(0,0,0,0.9);
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 999;
+	display: none;
+}
+
+.chrome-required {
+	width: 1024px;
+	height: 434px;
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	margin: -217px 0 0 -512px;
+}
+
+.chrome-required .logo {
+	color: #9e005d;
+	font-size: 88px;
+	font-family: Pacifico, Helvetica, sans-serif;
+}
+
+.chrome-required h2 span {
+	display: block;
+	font-size: 24px;
+}
+
+.download-chrome {
+	overflow: hidden;
+	width: 320px;
+	margin: 32px auto;
+	position: relative;
+	left: -24px;
+}
+
+a.download {
+	background: #1e5799;
+	background: -moz-linear-gradient(top, #1e5799 0%, #2989d8 50%, #207cca 51%, #7db9e8 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#1e5799), color-stop(50%,#2989d8), color-stop(51%,#207cca), color-stop(100%,#7db9e8));
+	background: -webkit-linear-gradient(top, #1e5799 0%,#2989d8 50%,#207cca 51%,#7db9e8 100%);
+	background: -o-linear-gradient(top, #1e5799 0%,#2989d8 50%,#207cca 51%,#7db9e8 100%);
+	background: -ms-linear-gradient(top, #1e5799 0%,#2989d8 50%,#207cca 51%,#7db9e8 100%);
+	background: linear-gradient(to bottom, #1e5799 0%,#2989d8 50%,#207cca 51%,#7db9e8 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e5799', endColorstr='#7db9e8',GradientType=0 );
+	color: #fff;
+	text-shadow: 0 2px 0 #1e5799;
+	font-weight: bold;
+	font-size: 24px;
+	padding: 8px 18px;
+	border-radius: 4px;
+	border: 1px solid #1e5799;
+	float: left;
+	margin-left: 12px;
+	text-decoration: none;
+}
+
+.chrome-icon {
+	background: url('/assets/images/chrome.png') center center no-repeat;
+	display: block;
+	width: 48px;
+	height: 48px;
+	background-size: 48px;
+	float: left;
+}
