--- a/src/views/layout.jade
+++ b/src/views/layout.jade
@@ -2,6 +2,7 @@ doctype 5
 html
   head(lang='en-US')
     title Conf.io | Real-Time Conferences for Everyone
+    link(rel='shortcut icon' href='/favicon.png')
     //- stylesheets
     link(rel='stylesheet', type='text/css', href='http://fonts.googleapis.com/css?family=Pacifico')
     link(rel='stylesheet', type='text/css', href='http://fonts.googleapis.com/css?family=Raleway:400,700')
