--- a/src/public/styles/base.css
+++ b/src/public/styles/base.css
@@ -180,11 +180,13 @@ footer {
 	margin: 4px 0;
 	font-size: 20px;
 	color: #9e005d;
+	overflow: hidden;
+	max-height: 20px;
 }
 
 #transcript .tools {
 	float: right;
-	width: 20%;
+	width: 25%;
 	padding: 0;
 	margin: 0;
 	list-style-type: none;
@@ -192,7 +194,7 @@ footer {
 }
 
 #transcript .tools li {
-	width: 33%;
+	width: 25%;
 	float: left;
 	height: 32px;
 }
@@ -204,11 +206,70 @@ footer {
 	text-indent: -9999px;
 	opacity: 0.7;
 	height: 100%;
+	background-size: 50px;
 }
 
 #transcript .tools button:hover {
 	opacity: 1;
 	cursor: pointer;
+}
+
+button.ask-question {
+	background: url('/assets/images/ask-question.png') center center no-repeat;
+	background-size: 26px !important;
+}
+
+#transcript button.ask-question[disabled]:hover {
+	opacity: 0.7 !important;
+	cursor: normal !important;
+}
+
+#ask {
+	position: absolute;
+	width: 388px;
+	background: rgba(255,255,255,0.9);
+	left: 50%;
+	top: -148px;
+	margin-left: -192px;
+	height: 148px;
+	border: 2px solid #fff;
+	display: none;
+}
+
+form.send-question {
+	text-align: center;
+}
+
+form.send-question textarea {
+	border: 1px solid #d2d2d2;
+	resize: none;
+	display: block;
+	width: 358px;
+	margin: 12px;
+	height: 82px;
+}
+
+form.send-question button {
+	background: #ffffff;
+	background: -moz-linear-gradient(top, #ffffff 0%, #e5e5e5 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(100%,#e5e5e5));
+	background: -webkit-linear-gradient(top, #ffffff 0%,#e5e5e5 100%);
+	background: -o-linear-gradient(top, #ffffff 0%,#e5e5e5 100%);
+	background: -ms-linear-gradient(top, #ffffff 0%,#e5e5e5 100%);
+	background: linear-gradient(to bottom, #ffffff 0%,#e5e5e5 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e5e5e5',GradientType=0 );
+	color: #9e005d;
+	border: none;
+	padding: 6px 16px;
+	font-size: 14px;
+	border-radius: 4px;
+	font-family: Raleway;
+	margin-top: -4px;
+	border: 1px solid #fff;
+}
+
+form.send-question button:hover {
+	background: #fff;
 }
 
 button.font-inc {
@@ -235,10 +296,55 @@ button.print {
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d3d3d3', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
 }
 
+.speech-toggle {
+	position: absolute;
+	top: 56px;
+	right: 0;
+	width: 64px;
+	height: 64px;
+	margin: 12px;
+	border-radius: 32px;
+	border: 1px solid rgba(0,0,0,0.2);
+	background-color: rgba(255,255,255,0.5);
+	background-position: center center;
+	background-repeat: no-repeat; 
+	text-indent: -9999px;
+	background-image: url('/assets/images/mic-off.png');
+}
+
+.speech-toggle.on {
+	opacity: 0.4;
+	background-image: url('/assets/images/mic-on.png');
+}
+
+.speech-toggle.off {
+	background-image: url('/assets/images/mic-off.png');
+}
+
+.speech-toggle.speaking {
+	opacity: 0.6;
+	background-image: url('/assets/images/mic-speaking.png');
+}
+
+.speech-toggle:hover {
+	background-color: rgba(255,255,255,0.9);
+	cursor: pointer;
+}
+
 #transcript .target {
 	margin: 24px;
 	font-size: 15px;
 	line-height: 24px;
+}
+
+#transcript .question {
+	color: #9e005d;
+	font-style: italic;
+	display: block;
+	margin: 8px;
+	padding: 12px;
+	background-color: rgba(0,0,0,0.05);
+	border-radius: 5px;
 }
 
 #join_dialog {
