--- a/src/views/landing-page.jade
+++ b/src/views/landing-page.jade
@@ -45,7 +45,7 @@ block content
       span or 
       button#host Create New Conference
     div#active_conferences.constrain
-      h3 Browse Active Conferences
+      h3 Browse Active Speakers
       if topics.length
         ul
           each room, i in topics
@@ -58,9 +58,11 @@ block content
   div#features
     div.constrain
       ul.feature-list
-        li Translate speech to any language
-        li Transcribe entire conference, using nothing but your voice
+        li Deliver real-time talks and seminars
+        li Transcribe your voice for your audience's reference
+        li Give your audience the floor and answer questions
       ul.feature-list
-        li Give participants "the floor" to add their input to the transcript
-        li Copy and print transcriptions with the click of a button
+        li Translate speaker's transcribed voice into your language
+        li Join public rooms and learn anything
+        li Copy and print entire seminars for reading later
   include ./footer.jade
