added default text to video element and fixed typo in events

--- a/src/views/templates/video.jade
+++ b/src/views/templates/video.jade
@@ -1,3 +1,4 @@
 div#video
-	video.presenter.standalone(src="", autoplay="true")
+	video.presenter.standalone(src="", autoplay="true") 
+		| Sorry, the presenter is not here right now.
 	video.participant(src="", autoplay="true")
